tira id desnecessário do nome na header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <img src="assets/img/foto.png" alt="Foto de perfil">
         <div>
-            <h1 id="nome">Gabriela Emi Yamamoto</h1>
+            <h1>Gabriela Emi Yamamoto</h1>
             <p class="texto-pequeno">Estudante de Desenvolvimento de Sistemas no SENAI de Valinhos</p>
         </div>
     </header>
