adiciona email nos contatos

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
             <h2 class="titulo-sessoes">Entre em Contato</h2>
             <p class="texto-normal">
                 Quer conversar sobre tecnologia? Me encontre no
-                <a href="https://github.com/gabiyamamoto" target="_blank">Github</a> ou
+                <a href="https://github.com/gabiyamamoto" target="_blank">Github</a>
                 <a href="https://www.linkedin.com/in/gabriela-emi-yamamoto?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                     target="_blank">Linkedin</a>
+                <a href="mailto:gabriela.yamamoto@aluno.senai.br" target="_blank">E-mail</a>
             </p>
         </section>
     </main>
